# lms_demo

./: .gitignore  LICENSE  README.md  lms.db  pyproject.toml  setup_structure.sh  test_api.py
src/lms/api/: dependencies.py  main.py
src/lms/api/routes/: __init__.py  certificate_routes.py  course_routes.py  enrollment_routes.py  user_routes.py
src/lms/application/: __init__.py
src/lms/application/dtos/: __init__.py  certificate_dtos.py  course_dtos.py  enrollment_dtos.py  user_dtos.py
src/lms/application/exceptions/: __init__.py  exceptions.py
src/lms/application/services/: __init__.py  certificate_service.py  course_service.py  enrollment_service.py  user_service.py
src/lms/domain/: __init__.py
src/lms/domain/entities/: __init__.py  entities.py
src/lms/domain/exceptions/: __init__.py  exceptions.py
src/lms/domain/repositories/: __init__.py  repositories.py
src/lms/domain/services/: __init__.py  services.py
src/lms/domain/value_objects/: __init__.py  value_objects.py
src/lms/infrastructure/: __init__.py
src/lms/infrastructure/database/: __init__.py  database.py  models.py
src/lms/infrastructure/repositories/: __init__.py  certificate_repository.py  course_repository.py  enrollment_repository.py  user_repository.py
src/lms_demo/: __init__.py
src/lms_demo/domain/entities/: __init__.py  entities.py
src/lms_demo/domain/exceptions/: __init__.py  exceptions.py
tests/: conftest.py
tests/application/services/: test_certificate_service.py  test_course_service.py  test_enrollment_service.py  test_user_service.py
(+6 files in other folders)
