[project]
name = "lms-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "w3ia", email = "web3ia@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
lms-demo = "lms_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
