[project]
name = "lms-demo"
version = "0.1.0"
description = "Example Learning Management System (LMS) implemented using Domain Driven Development approach"
readme = "README.md"
authors = [
    { name = "exaltai", email = "hnagra@exaltai.co.uk" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
lms-demo = "lms_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
